2003-11-12  Mark Mitchell  <mark@codesourcery.com>

	* qm/common.py (open_temporary_file): Fix typo.

2003-11-10  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/qmtest: If SIGINT is received, make sure that our exit
	code reflects that fact.
	* qm/test/classes/text_result_stream.py
	(TextResultStream._FormatStatistics): Robustify.

	* qm/test/classes/text_result_stream.py
	(TextResultStream.arguments): Add statistics_format.
	(TextResultStream._DisplayArguments): Do not write out the
	heading here.  Honor the statistics_format, if provided.
	(TextResultStream._SummarizeTestStats): Use _FormatStatistics.
	(TextResultStream._SummarizeRelativeTestStats): Likewise.
	(TextResultStream._FormatStatistics): New function.

2003-11-09  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in (.PHONY): Add build and doc.
	(build): New target.
	(doc): Likewise.
	(check-serial): Depend on build, not all.
	(check-threads): Likewise.
	(check-processes): Likewise.
	(check-rsh): Likewise.

	* qm/temporary_directory.py (sys): Import it.
	
	* GNUmakefile.in (DOCUMENTATION): Set value to MAINTAINER_MODE.
	(TIDY): Likewise.
	(TIDYFLAGS): Likewise.
	* configure.in: Do not search for Jade, tidy, DocBook stylesheets,
	etc.
	* configure: Regenerated.

2003-10-15  Mark Mitchell  <mark@codesourcery.com>

	* qm/fields.py (SetField.ParseFormValue): Correct logic
	determining whether or not to redisplay the form.

2003-10-14  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in: Sipmlify drastically, relying on distutils to do
	all of the work.
	* setup.py: Tidy.  Add support for DTML files and other missing
	GUI functionality.
	* qm/__init__.py: Pull in data_dir from the configuration file.
	* qm/common.py (get_share_directory): Use it.
	(get_doc_directory): Likewise.
	* qm/qm.sh: Remove.
	* qm/test/.cvsignore: Remove qmtest and qmtest.bat.
	* qm/test/base.py (get_extension_directories): Use
	get_share_directory to find test classes.